force-app/main/default/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>Fable </fullName>
                </value>
                <value>
                    <fullName>Fairy tale </fullName>
                </value>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Folklore </fullName>
                </value>
                <value>
                    <fullName>Historical fiction</fullName>
                </value>
                <value>
                    <fullName>Horror </fullName>
                </value>
                <value>
                    <fullName>Humor</fullName>
                </value>
                <value>
                    <fullName>Legend </fullName>
                </value>
                <value>
                    <fullName>Magical realism </fullName>
                </value>
                <value>
                    <fullName>Mystery </fullName>
                </value>
                <value>
                    <fullName>Mythology </fullName>
                </value>
                <value>
                    <fullName>Picture book </fullName>
                </value>
                <value>
                    <fullName>Realistic fiction</fullName>
                </value>
                <value>
                    <fullName>Science fiction </fullName>
                </value>
                <value>
                    <fullName>Short story </fullName>
                </value>
                <value>
                    <fullName>Suspense</fullName>
                </value>
                <value>
                    <fullName>Thriller </fullName>
                </value>
                <value>
                    <fullName>Tall tale </fullName>
                </value>
                <value>
                    <fullName>Western </fullName>
                </value>
                <value>
                    <fullName>Biography </fullName>
                </value>
                <value>
                    <fullName>Autobiography</fullName>
                </value>
                <value>
                    <fullName>Essay  </fullName>
                </value>
                <value>
                    <fullName>Owner&apos;s manual </fullName>
                </value>
                <value>
                    <fullName>Journalism </fullName>
                </value>
                <value>
                    <fullName>Lab Report  </fullName>
                </value>
                <value>
                    <fullName>Memoir  </fullName>
                </value>
                <value>
                    <fullName>Narrative nonfiction</fullName>
                </value>
                <value>
                    <fullName>Reference book  </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>